--- a/src/components/AddTodoForm/AddTodoForm.module.scss
+++ b/src/components/AddTodoForm/AddTodoForm.module.scss
@@ -6,7 +6,7 @@
   align-items: center;
   gap: 1rem;
   border-radius: 12px;
-  border: 1px solid #EF6121;
+  border: 1px solid #EDC844;
 
   background-color: #1E1E1E;
 }
